<resources>
    <string name="app_name">Lab 4.4 Networks</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="code">Code</string>
    <string name="credit">Credit</string>
    <string name="title">Title</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="dogId">ID</string>
    <string name="dogBreed">Breed</string>
    <string name="dogColor">Color</string>
    <string name="dogCondition">Condition</string>
    <string name="dogOrganization">Organization</string>
    <string name="dogGender">Gender</string>
    <string name="dogAge">Age</string>
    <string name="dogSize">Size</string>
    <string name="eventID">ID</string>
    <string name="eventName">Name</string>
    <string name="eventDesc">Description</string>
    <string name="eventDateTime"><![CDATA[Date & Time]]></string>
    <string name="eventLocation">Location</string>
    <string name="eventOrganizer">Organizer</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="userRealName">Real Name</string>
    <string name="userAddress">Address</string>
    <string name="userContactNo">Contact Number</string>
    <string name="userAge">Age</string>
    <string name="userGender">Gender</string>
    <string name="userICNo">IC Number</string>
    <string name="organizationId">ID</string>
    <string name="organizationName">Name</string>
    <string name="organizationLocation">Location</string>
    <string name="organizationOwner">Owner</string>
    <string name="organizationPhoneNo">Phone Number</string>
</resources>